# Simplified-Airbnb

./: CMakeLists.txt  LICENSE  README.md  Users.json  cities.json  main.cpp  places.json  reservations.json  tasks.json
classes/: City.cpp  City.h  Place.cpp  Place.h  Reservation.cpp  Reservation.h  Signup_Login.cpp  Signup_Login.h  Start.cpp  Start.h
classes/includes/: ArrayList.cpp  ArrayList.h  LinkedList.cpp  LinkedList.h  cdate.cpp  cdate.h
classes/users/: Admin.cpp  Admin.h  Host.cpp  Host.h  Person.cpp  Person.h  Traveler.cpp  Traveler.h  User.cpp  User.h
